範囲指定した場合のバグ修正

--- a/CaptureZipper/CaptureZipper.csproj
+++ b/CaptureZipper/CaptureZipper.csproj
@@ -81,4 +81,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy "$(TargetPath)" C:\User\Tools\$(TargetName).exe</PostBuildEvent>
+  </PropertyGroup>
 </Project>
