--- a/CaptureZipper/CaptureZipper.csproj
+++ b/CaptureZipper/CaptureZipper.csproj
@@ -80,6 +80,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="CZ.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy "$(TargetPath)" C:\User\Tools\$(TargetName).exe</PostBuildEvent>
